[package]
name = "rs-telegraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libxml = "0.3.1"
mime_guess = "2.0.4"
reqwest = { version = "0.11.12" }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros", "test-util"] }
